# CP-Problems

./: .gitignore  README.md  test_sanitizer.sh
CodeForces/Algorithms/: .clangd  .gitignore  .template_config.json  CMakeLists.txt  CMakePresets.json  GNUmakefile  PCH.h  Tester.cpp  clang-toolchain.cmake  debug.h  gcc-toolchain.cmake  test-sub.cpp  testlib.h
CodeForces/Algorithms/bits/: stdc++.h
CodeForces/Algorithms/clangd/: clangd.linux  clangd.macos
CodeForces/Algorithms/cmake/: CPRoundBootstrap.cmake  CPRoundConfig.cmake  CPRoundFeatureLTO.cmake  CPRoundFeaturePCH.cmake  CPRoundFeatureSanitizers.cmake  CPRoundFeatureTiming.cmake  CPRoundPresets.json  CPRoundSummary.cmake  CPRoundTargets.cmake  ClangdAssist.cmake  PCHBenchmark.md  PCHBenchmarkResult.json  README.md
CodeForces/Algorithms/libs/: PCH.h  PCH_Workspace.h  PCH_Wrapper.h  debug.h  debug_core.h  debug_perf.h  debug_tree.h  debug_watch.h
CodeForces/Algorithms/modules/: Algebra.hpp  Bitwise.hpp  Data_Structures.hpp  Geometry.hpp  Graph.hpp  Number_Theory.hpp  Splay_Tree.hpp  Strings.hpp
CodeForces/Algorithms/modules/algebra/: ActedMonoid.hpp  Algebra.hpp  MonoidPower.hpp  _Common.hpp
CodeForces/Algorithms/modules/bitwise/: XorBoundIntervals.hpp  _Common.hpp
CodeForces/Algorithms/modules/data/: registry.json
CodeForces/Algorithms/modules/data_structures/: ConvexHullTrick.hpp  DSURollback.hpp  DynamicBitset.hpp  FenwickTree.hpp  FenwickTree2D.hpp  LazySegTree.hpp  LiChaoTree.hpp  LinkCutTree.hpp  Mo.hpp  PersistentSegTree.hpp  PrefixFlipTree.hpp  RangeLineHull.hpp  SegmentTree.hpp  SegmentTreeHull.hpp  SegmentTreeMinAddSearch.hpp  SparseDeltaSweep.hpp  SparseTable.hpp  SqrtDecomposition.hpp  Treap.hpp  _Common.hpp
CodeForces/Algorithms/modules/geometry/: Circle.hpp  ConvexDiameter.hpp  HalfPlane.hpp  Line2D.hpp  Plane3D.hpp  Point2D.hpp  Point3D.hpp  PointInConvexPolygon.hpp  Polygon.hpp  _Common.hpp
CodeForces/Algorithms/modules/graph/: BipartiteMatching.hpp  CentroidDecomposition.hpp  DSU.hpp  DijkstraSparse.hpp  Dinic.hpp  EulerTour.hpp  EulerianPath.hpp  FloydWarshall.hpp  Graph.hpp  HLD.hpp  Kruskal.hpp  LCA.hpp  LCA_RMQ.hpp  MinCostMaxFlow.hpp  Prim.hpp  TarjanSCC.hpp  TwoSAT.hpp  ZeroOneBFS.hpp  _Common.hpp
CodeForces/Algorithms/modules/number_theory/: DiscreteLog.hpp  Euclid.hpp  FWHT.hpp  Garner.hpp  LinearDiophantine.hpp  Lucas.hpp  Mobius.hpp  NTT.hpp  Phi.hpp  PollardRho.hpp  Primality64.hpp  PrimitiveRoot.hpp  Sieve.hpp  TonelliShanks.hpp  _Common.hpp
CodeForces/Algorithms/modules/splay_tree/: Monoids.hpp  SplayTree.hpp  _Common.hpp
CodeForces/Algorithms/modules/strings/: AhoCorasick.hpp  AhoCorasickAdvanced.hpp  KMP.hpp  LyndonFactorization.hpp  Manacher.hpp  PalindromicTree.hpp  PrefixAutomaton.hpp  PrefixFunction.hpp  RollingHash.hpp  SuffixArray.hpp  SuffixAutomaton.hpp  Trie.hpp  WildcardPatternMatching.hpp  ZAlgorithm.hpp  _Common.hpp
CodeForces/Algorithms/reports/: ALGORITHMS_WORKSPACE_CMAKE.md  IO_PROFILE_POLICY.md  MODULE_VERIFICATION_WORKFLOW.md  PCH_BENCHMARK.md  TIMEOUT_POLICY.md  test_report.json
CodeForces/Algorithms/scripts/: CONTRIBUTING.md  GIT_VERSIONING_WORKFLOW.md  benchmark_pch.py  build_template.sh  flattener.py  gen_config.py  gen_scaffold.py  migrate_round_cmake.py  migrate_round_presets.py  migrate_round_toolchains.py  migrate_round_vscode.py  migration_common.py  module_runtime.py  module_tester.py  module_verify.py  need_resolver.py  profile_registry.py  pyproject.toml  strip_index_casts.py  syntax_check.py  version_manager.py  workflow_manager.py
CodeForces/Algorithms/scripts/_lib/: __init__.py  process.py
CodeForces/Algorithms/scripts/docs/: TIMEOUT_POLICY.md
CodeForces/Algorithms/scripts/flattener_core/: __init__.py  flattener_helpers.py  headers.py  includes.py  lexer.py  macros.py  ppexpr.py  preprocessor.py  symbols.py
CodeForces/Algorithms/scripts/flattener_pipeline/: __init__.py  cli.py  context.py  formatting.py  macros.py  pipeline.py  submission.py  validation.py
CodeForces/Algorithms/scripts/tests/: conftest.py  test_flattener.py  test_flattener_compile.py  test_flattener_inproc.py  test_module_parallel.py  test_module_verify.py  test_ppexpr.py  test_profile_registry.py  test_scripts_regressions.py  test_workflow_manager_cli.py
CodeForces/Algorithms/submissions/: Tester_sub.cpp
CodeForces/Algorithms/templates/: Base.hpp  Base_features.hpp  Base_profiles.hpp  Bit_Ops.hpp  Cast.hpp  Concepts.hpp  Config_defaults.hpp  Constants.hpp  ContainerAliases.hpp  Containers.hpp  Debug.hpp  Deprecated.hpp  Fast_IO.hpp  Fast_IO_Ext_ModInt.hpp  Fast_IO_Ext_StrongType.hpp  Fast_IO_Fwd.hpp  FeatureDetect.hpp  Hashing.hpp  IO.hpp  IO_Composite.hpp  IO_Defs.hpp  Macros.hpp  Math.hpp  MinMax.hpp  Mod_Int.hpp  PBDS.hpp  PortableStdHeaders.hpp  Preamble.hpp  Random.hpp  ScalarTypes.hpp  Strong_Type.hpp  Timer.hpp  TypeTraits.hpp  Types.hpp  profiles.toml
CodeForces/Solution_Test-ENV/: .clang-format  .clang-tidy  .clangd  .gitignore  .vscode  CMakeLists.txt  Makefile  PCH.h  README.md  Sol_H.cpp  Tester.cpp  get_gcc_includes.sh  input.txt  template.cpp  tree.dot
CodeForces/Solution_Test-ENV/.ide-configs/: clangd
CodeForces/Solution_Test-ENV/.statistics/: active_build_dir  contest_metadata  last_config
CodeForces/Solution_Test-ENV/Analyzed/: Mandelbrot.cpp  debug_test.cpp  probem_F_Round-1037.cc  problem_E_R1041-Div-1_V3.cpp  problem_E_R1041-Div-1_V4.cpp  problem_E_R1041_Div-1_V1.cpp  problem_E_R1041_Div-1_V2.cpp  problem_E_Round-1041_Div-1.cpp  problem_H_R1042_Div-3.cpp  problem_H_v2_R1042_Div-3.cpp
CodeForces/Solution_Test-ENV/Debug/: Linked_List.cpp  Tester_H.cpp  debug.py  debug_Linked-List.cpp  debug_test.cpp  lldb_formatters.py
CodeForces/Solution_Test-ENV/algorithms/: PCH.h  PCH_Wrapper.h  cmake  debug.h  modules  templates
CodeForces/Solution_Test-ENV/assets/: get_gcc_includes.sh
CodeForces/Solution_Test-ENV/include/: competitive.hpp  graph.hpp  linked_list.hpp  tree.h  tree.hpp
CodeForces/Solution_Test-ENV/scripts/: benchmark.sh  contest-helper.sh  get_gcc_includes.sh  integrate_benchmark.sh
(+924 files in other folders)
